# game3

./: .aliases.sh  .clang-tidy  .gitignore  .gitmodules  .gtkmm4.sh  .pango.patch  .zig.sh  INVARIANTS.md  LICENSE  Makefile  PROTOCOL.md  README.md  TODO  flatpak-cleanup.sh  flatpak.ini  game3.gresource.xml  gay.heimskr.Game3.json  hack-resgen.sh  hack.sh  linzip.sh  lsan_suppressions.txt  meson.build  meson_options.txt  new_world2d.tres  project.godot  publish.sh  quasi_msys2.sh  tsan_suppressions.txt  vcpkg.json
data/: crops.json  durabilities.json  entity_textures.json  fluids.json  gay.heimskr.Game3.appdata.xml.in  gay.heimskr.Game3.desktop.in  gay.heimskr.Game3.gschema.xml  ghost_details.json  item_textures.json  meson.build  monomap.json  ores.json  realm_details.json  recipes.json  textures.json  tilesets.json
data/icons/: meson.build
oglft/: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  configure  configure.ac
oglft/config/: config.h.in
oglft/doc/: Makefile.am  Makefile.in
oglft/liboglft/: Makefile.am  Makefile.in  OGLFT.cpp  OGLFT.h
oglft/tests/: Demo3UnicodeExample.h  Makefile.am  Makefile.in  demo.cpp  demo2.cpp  demo3.cpp  demo4.cpp  speedtest.cpp  speedtest.h  tutorial1.cpp  tutorial2.cpp  tutorial3.cpp  vignette.h
src/: App.cpp  Direction.cpp  Directions.cpp  Extractors.cpp  Flasker.cpp  Image.cpp  Log.cpp  MarchingSquares.cpp  Position.cpp  Quadrant.cpp  Shader.cpp  Splitter.cpp  Test.cpp  Texture.cpp  ThreadContext.cpp  Tilemap.cpp  Tiles.cpp  Tileset.cpp  Types.cpp  WindowsHacks.cpp  discord-grabber.sh  grabber.sh  main.cpp  meson.build  resgen.zig  resources.zig
src/algorithm/: AStar.cpp  DamageCalculation.cpp  MarchingSquares.cpp  NoiseGenerator.cpp  Spiral.cpp  Stonks.cpp
src/biology/: Gene.cpp
src/biome/: Biome.cpp  Desert.cpp  Grassland.cpp  Snowy.cpp  Volcanic.cpp
src/chemistry/: ChemistryResults.cpp  CombinerInput.cpp  DissolverResults.cpp  MoleculeColors.cpp  MoleculeNames.cpp
src/client/: ClientSettings.cpp  RichPresence.cpp  ServerWrapper.cpp
src/container/: ImageSpan.cpp  Quadtree.cpp  StringSet.cpp
src/data/: ChunkSet.cpp  ConsumptionRule.cpp  Dependency.cpp  GameDB.cpp  Identifier.cpp  ProductionRule.cpp  Richness.cpp  SoundPath.cpp  SoundSet.cpp  SqliteDB.cpp  UserInfo.cpp  WorldDB.cpp
src/dialogue/: Dialogue.cpp  RhosumShop.cpp  RhosumShopNode.cpp
src/entity/: Animal.cpp  Blacksmith.cpp  Bomb.cpp  Chicken.cpp  ClientPlayer.cpp  Crab.cpp  Dog.cpp  Egg.cpp  Entity.cpp  EntityFactory.cpp  EntityZCompare.cpp  ExplosionParticle.cpp  FluidParticle.cpp  Gatherer.cpp  ItemEntity.cpp  LivingEntity.cpp  LivingTitledEntity.cpp  Merchant.cpp  Miner.cpp  Monster.cpp  Pig.cpp  Player.cpp  Projectile.cpp  Quarter.cpp  ServerPlayer.cpp  Sheep.cpp  Ship.cpp  Snowball.cpp  Speaker.cpp  SquareParticle.cpp  TextParticle.cpp  TitledEntity.cpp  Util.cpp  Woodcutter.cpp  Worker.cpp
src/fluid/: Brine.cpp  Fluid.cpp  Lava.cpp  Milk.cpp  Mutagen.cpp  PowderedSnow.cpp  Radon.cpp  SulfuricAcid.cpp  Water.cpp
src/game/: Agent.cpp  BiomeMap.cpp  Building.cpp  ChunkPosition.cpp  ClientGame.cpp  ClientInventory.cpp  CraftingManager.cpp  Crop.cpp  Dialogue.cpp  EnergyContainer.cpp  Entity.cpp  ExpandedServerInventory.cpp  FluidContainer.cpp  Fluids.cpp  Game.cpp  HasDimensions.cpp  HasEnergy.cpp  HasFluids.cpp  HasInventory.cpp  HasPlace.cpp  HasTickQueue.cpp  HasVillages.cpp  InteractionSet.cpp  Inventory.cpp  InventoryGetter.cpp  InventorySpan.cpp  InventoryWrapper.cpp  Item.cpp  Observable.cpp  OwnsVillages.cpp  Player.cpp  Realm.cpp  Resource.cpp  ServerGame.cpp  ServerInventory.cpp  Sign.cpp  Stonks.cpp  StorageInventory.cpp  Teleporter.cpp  Tickable.cpp  (+3 more)
src/graph/: DFSResult.cpp  Graph.cpp  Node.cpp
src/graphics/: BatchSpriteRenderer.cpp  CircleRenderer.cpp  Color.cpp  ElementBufferedRenderer.cpp  FluidRenderer.cpp  GL.cpp  HasBackbuffer.cpp  ItemSet.cpp  Multiplier.cpp  Omniatlas.cpp  Overlayer.cpp  PathmapTextureCache.cpp  RealmRenderer.cpp  Recolor.cpp  Rectangle.cpp  RectangleRenderer.cpp  RendererContext.cpp  Reshader.cpp  ScissorStack.cpp  Shader.cpp  SingleSpriteRenderer.cpp  SizeSaver.cpp  SpriteRenderer.cpp  TextRenderer.cpp  Texture.cpp  TextureCombiner.cpp  Tileset.cpp  UnderseaRealmRenderer.cpp  UpperRenderer.cpp  Util.cpp
src/item/: Bomb.cpp  Cake.cpp  CaveEntrance.cpp  ChemicalItem.cpp  Clay.cpp  ContainmentOrb.cpp  Copier.cpp  Drink.cpp  EmptyFlask.cpp  EntitySpawnItem.cpp  FilledFlask.cpp  Floor.cpp  Flower.cpp  FluidGun.cpp  Food.cpp  Furniture.cpp  Hammer.cpp  Hoe.cpp  Item.cpp  ItemPipe.cpp  ItemPipeItem.cpp  ItemStack.cpp  Landfill.cpp  Landfills.cpp  Mead.cpp  MeleeWeapon.cpp  Mushroom.cpp  Mutagen.cpp  Pickaxe.cpp  PipeItem.cpp  Plantable.cpp  Products.cpp  ProjectileItem.cpp  PumpItem.cpp  Sapling.cpp  Seed.cpp  SulfuricAcidItem.cpp  TerrainSeed.cpp  Tool.cpp  VoidFlask.cpp  (+3 more)
src/lib/: Chip8.cpp  GLFont  GLUtils  JSON.cpp  PNG.cpp  backward.cpp  nanovg.cpp
src/math/: Random.cpp  Rectangle.cpp  Vector.cpp
src/menu/: InventoryMenu.cpp
src/minigame/: Breakout.cpp  FlappyBird.cpp  MathGame.cpp  Minigame.cpp  MinigameFactory.cpp
src/mixin/: HasSoundSet.cpp
src/net/: Broadcastable.cpp  Buffer.cpp  CertGen.cpp  DirectLocalClient.cpp  DirectRemoteClient.cpp  GameClient.cpp  GameServer.cpp  GenericClient.cpp  HTTP.cpp  LocalClient.cpp  LocalServer.cpp  RemoteClient.cpp  SSLServer.cpp  SSLSock.cpp  Server.cpp  Sock.cpp  SocketBuffer.cpp
src/packet/: ActiveSlotSetPacket.cpp  AddKnownItemPacket.cpp  AgentMessagePacket.cpp  BuyFromRhosumPacket.cpp  ChatMessageSentPacket.cpp  ChunkRequestPacket.cpp  ChunkTilesPacket.cpp  ClickPacket.cpp  CommandPacket.cpp  CommandResultPacket.cpp  ContinuousInteractionPacket.cpp  CraftPacket.cpp  DestroyEntityPacket.cpp  DestroyTileEntityPacket.cpp  DisplayTextPacket.cpp  DoVillageTradePacket.cpp  DragPacket.cpp  DropItemPacket.cpp  EntityChangingRealmsPacket.cpp  EntityMoneyChangedPacket.cpp  EntityMovePacket.cpp  EntityMovedPacket.cpp  EntityPacket.cpp  EntityRequestPacket.cpp  EntityRiddenPacket.cpp  EntitySetPathPacket.cpp  ErrorPacket.cpp  (+54 more)
(+2458 files in other folders)
