option('is_flatpak', type: 'boolean', value: false, description: 'Whether a Flatpak is being built')
option('vcpkg_triplet', type: 'string', value: '', description: 'The vcpkg triplet to use (leave blank to disable vcpkg)')
option('discord_rich_prescence', type: 'boolean', value: false, description: 'Whether to disable Discord rich presence support')
